Avoid jumpy charts on small screens

--- a/scss/partials/_d3_chart.scss
+++ b/scss/partials/_d3_chart.scss
@@ -27,7 +27,7 @@ div.composed-section {
       float: right;
 
       @include big_web(){
-        margin-right: 50px;
+        margin-right: 30px;
       }
     }
 
